Шифротекст => шифртекст per #4705 by @korobkina

--- a/bigrammnye_substitution_ciphers.tex
+++ b/bigrammnye_substitution_ciphers.tex
@@ -35,4 +35,4 @@
 \end{tabular} \end{center}
 \exampleend
 
-Шифр Плейфера\index{шифр!Плейфера} не является криптографически стойким. Несложно найти ключ, если известны пара открытого текста и соответствующего ему шифротекста. Если известен только шифротекст, криптоаналитик может проанализировать соответствие между частотой появления биграмм в шифротексте и известной частотой появления биграмм в языке, на котором написано сообщение. Такой частотный анализ помогает дешифрованию.
+Шифр Плейфера\index{шифр!Плейфера} не является криптографически стойким. Несложно найти ключ, если известны пара открытого текста и соответствующего ему шифртекста. Если известен только шифртекст, криптоаналитик может проанализировать соответствие между частотой появления биграмм в шифртексте и известной частотой появления биграмм в языке, на котором написано сообщение. Такой частотный анализ помогает дешифрованию.
