--- a/definitions.tex
+++ b/definitions.tex
@@ -43,7 +43,7 @@
 \input{classification_by_symmetry}
 \subsection{Шифры замены и перестановки}
 
-Шифры по способу преобразования открытого текста в шифротекст разделяются на шифры замены и шифры перестановки.
+Шифры по способу преобразования открытого текста в шифртекст разделяются на шифры замены и шифры перестановки.
 
 \input{substitution_ciphers}
 
