--- a/el-gamal.tex
+++ b/el-gamal.tex
@@ -52,7 +52,7 @@
     m' \equiv m \mod p.
 \end{array} \]
 
-Чтобы криптоаналитику получить исходное сообщение $m$ из шифротекста $(a, b)$, зная только открытый ключ получателя $\text{PK} = (p, g, y)$, нужно вычислить значение $m = b \cdot y^{-r} \mod p$. Для этого криптоаналитику нужно найти случайный параметр $r = \log_g a \mod p$, то есть вычислить дискретный логарифм. Такая задача является вычислительно сложной.
+Чтобы криптоаналитику получить исходное сообщение $m$ из шифртекста $(a, b)$, зная только открытый ключ получателя $\text{PK} = (p, g, y)$, нужно вычислить значение $m = b \cdot y^{-r} \mod p$. Для этого криптоаналитику нужно найти случайный параметр $r = \log_g a \mod p$, то есть вычислить дискретный логарифм. Такая задача является вычислительно сложной.
 
 \example Создание ключей, шифрование и расшифрование в криптосистеме Эль-Гамаля.
 
@@ -101,12 +101,12 @@
                     a = g^r \mod p = 6^{25} \mod 41 = 14 \mod 41, \\
                     b = m y^r \mod p = 3 \cdot (-7)^{25} \mod 41 = -9 \mod 41.
                 \end{array} \]
-            \item Шифротекстом является пара чисел
+            \item Шифртекстом является пара чисел
                 \[ c = (a:14, ~ b:-9). \]
         \end{enumerate}
     \item Расшифрование.
         \begin{enumerate}
-            \item Пусть получен шифротекст
+            \item Пусть получен шифртекст
                 \[ c = (a:14, ~ b:-9). \]
             \item Вычислим открытый текст как
                 \[ \begin{array}{ll}
