--- a/monoalphabetic_ciphers.tex
+++ b/monoalphabetic_ciphers.tex
@@ -1,7 +1,7 @@
 \section{Моноалфавитные шифры}\label{section-substitution-cipher}\index{шифр!моноалфавитный|(}
 \selectlanguage{russian}
 
-Преобразования открытого текста в шифротекст могут быть описаны различными функциями. Если функция преобразования является аддитивной, то и соответствующий шифр называется \emph{аддитивным}. Если это преобразование является аффинным, то шифр называется \emph{аффинным}.
+Преобразования открытого текста в шифртекст могут быть описаны различными функциями. Если функция преобразования является аддитивной, то и соответствующий шифр называется \emph{аддитивным}. Если это преобразование является аффинным, то шифр называется \emph{аффинным}.
 
 \subsection{Шифр Цезаря}\label{section-caesar-cipher}\index{шифр!Цезаря}
 
@@ -23,7 +23,7 @@
 В русском языке сообщение \texttt{изучайтекриптографию} посредством шифрования с ключом $K = \text{\texttt{г}}$ (сдвиг вправо на 3 символа по алфавиту) преобразуется в \texttt{лкцъгмхзнултхсёугчлб}.
 \exampleend
 
-Недостатком любого шифра замены является то, что в шифрованном тексте сохраняются все частоты появления букв открытого текста и корреляционные связи между буквами. Они существуют в каждом языке. Например, в русском языке чаще всего встречаются буквы $A$ и $O$. Для дешифрования криптоаналитик имеет возможность прочитать открытый текст, используя частотный анализ букв шифротекста. Для <<взлома>> шифра Цезаря достаточно найти одну пару букв -- одну замену.
+Недостатком любого шифра замены является то, что в шифрованном тексте сохраняются все частоты появления букв открытого текста и корреляционные связи между буквами. Они существуют в каждом языке. Например, в русском языке чаще всего встречаются буквы $A$ и $O$. Для дешифрования криптоаналитик имеет возможность прочитать открытый текст, используя частотный анализ букв шифртекста. Для <<взлома>> шифра Цезаря достаточно найти одну пару букв -- одну замену.
 
 \subsection{Аддитивный шифр перестановки}\index{шифр!перестановки аддитивный}
 
