--- a/perfect_secure_systems.tex
+++ b/perfect_secure_systems.tex
@@ -1,16 +1,16 @@
 \chapter{Совершенная криптостойкость}\index{криптостойкость!совершенная|(}
 \selectlanguage{russian}
 
-Рассмотрим модель криптосистемы, в которой Алиса выступает источником сообщений $m \in \group{M}$. Алиса использует некоторую функцию шифрования, результатом вычисления которой является шифротекст $c \in \group{C}$:
+Рассмотрим модель криптосистемы, в которой Алиса выступает источником сообщений $m \in \group{M}$. Алиса использует некоторую функцию шифрования, результатом вычисления которой является шифртекст $c \in \group{C}$:
 
 	\[c = E_{K_1}\left(m\right).\]
 
-Шифротекст $c$ передаётся по открытому каналу легальному пользователю Бобу, причём по пути он может быть перехвачен нелегальным пользователем (криптоаналитиком) Евой.
+Шифртекст $c$ передаётся по открытому каналу легальному пользователю Бобу, причём по пути он может быть перехвачен нелегальным пользователем (криптоаналитиком) Евой.
 
 Боб, обладая ключом расшифрования $K_2$, расшифровывает сообщение с использованием функции расшифрования:
 	\[m' = D_{K_2}\left(c \right).\]
 
-Рассмотрим теперь исходное сообщение, передаваемый шифротекст и ключи шифрования (и расшифрования, если они отличаются) в качестве случайных величин, описывая их свойства с точки зрения теории информации. Далее полагаем, что в криптосистеме ключи шифрования и расшифрования совпадают.
+Рассмотрим теперь исходное сообщение, передаваемый шифртекст и ключи шифрования (и расшифрования, если они отличаются) в качестве случайных величин, описывая их свойства с точки зрения теории информации. Далее полагаем, что в криптосистеме ключи шифрования и расшифрования совпадают.
 
 Будем называть криптосистему \emph{корректной}, если она обладает следующими свойствами:
 \begin{itemize}
@@ -31,15 +31,15 @@
 Криптосистемы совершенной стойкости могут применяться как в современных вычислительных сетях, так и для шифрования любой бумажной корреспонденции. Основной проблемой применения данных шифров для шифрования больших объёмов информации является необходимость распространения ключей объёмом не меньшим, чем передаваемые сообщения.
 
 \begin{definition}\label{perfect_by_probabilities}
-Будем называть криптосистему \emph{совершенно криптостойкой}, если апостериорное распределение вероятностей исходного случайного сообщения $m_i \in \group{M}$ при регистрации случайного шифротекста $c_k \in \group{C}$ совпадает с априорным распределением~\cite{Gultyaeva:2010}:
+Будем называть криптосистему \emph{совершенно криптостойкой}, если апостериорное распределение вероятностей исходного случайного сообщения $m_i \in \group{M}$ при регистрации случайного шифртекста $c_k \in \group{C}$ совпадает с априорным распределением~\cite{Gultyaeva:2010}:
 
 	\[\forall m_j \in \group{M}, c_k \in \group{C} \hookrightarrow P \left( m = m_j | c = c_k \right) = P \left( m = m_j \right).\]
 \end{definition}
 
-Данное условие можно переформулировать в терминах статистических свойств сообщения, ключа и шифротекста как случайных величин.
+Данное условие можно переформулировать в терминах статистических свойств сообщения, ключа и шифртекста как случайных величин.
 
 \begin{definition}\label{perfect_by_enthropy}
-Будем называть криптосистему \emph{совершенно криптостойкой}, если условная энтропия сообщения\index{энтропия!условная}\index{энтропия!открытого текста} при известном шифротексте равна безусловной:
+Будем называть криптосистему \emph{совершенно криптостойкой}, если условная энтропия сообщения\index{энтропия!условная}\index{энтропия!открытого текста} при известном шифртексте равна безусловной:
 \begin{gather*}
 	H \left( M | C \right) = H \left( M \right),\\
 	I \left( M; C \right) = 0.
@@ -50,7 +50,7 @@
 
 \section[Условие]{Условие совершенной криптостойкости}
 
-Найдём оценку количества информации, которое содержит шифротекст $C$ относительно сообщения $M$:
+Найдём оценку количества информации, которое содержит шифртекст $C$ относительно сообщения $M$:
 \[ I(M; C) = H(M) - H(M | C). \]
 Очевидны следующие соотношения условных и безусловных энтропий~\cite{GabPil:2007}:
 \begin{gather*}
@@ -60,9 +60,9 @@ H(K)\geq H(K|C)\geq H(M|C).
 \end{gather*}
 Отсюда получаем:
  \[ I(M; C) = H(M) - H(M | C)\geq H(M)-H(K). \]
-Из последнего неравенства следует, что взаимная информация между сообщением и шифротекстом равна нулю, если энтропия ключа не меньше энтропии сообщений. С другой стороны, взаимная информация между сообщением и шифротекстом равна нулю, если они статистически независимы. Таким образом, условием совершенной криптостойкости является неравенство:
+Из последнего неравенства следует, что взаимная информация между сообщением и шифртекстом равна нулю, если энтропия ключа не меньше энтропии сообщений. С другой стороны, взаимная информация между сообщением и шифртекстом равна нулю, если они статистически независимы. Таким образом, условием совершенной криптостойкости является неравенство:
 \[ H(M) \leq H(K).\]
-%Если утверждение верно, то количество информации в шифротексте относительно открытого текста $I(M; C)$ равно нулю:
+%Если утверждение верно, то количество информации в шифртексте относительно открытого текста $I(M; C)$ равно нулю:
 %  \[ I(M; C) = H(M) - H(M | C) = 0, \]
 %так как для статистически независимых величин условная энтропия равна безусловной энтропии, то есть $H(M) = H(M | C)$.
 
@@ -82,11 +82,11 @@ H(K)\geq H(K|C)\geq H(M|C).
 
 %Основное требование: при выбранном ключе $k$ вычисление $m$ должно быть лёгкой задачей для любого $c$. С другой стороны, при неизвестном ключе $k$ вычисление открытого сообщения $m$ по известному шифрованному сообщению $c$ должно быть трудной задачей для любого $c$.
 
-%Криптостойкость шифра оценивается числом операций, необходимым для определения: открытого текста $m$ по шифротексту $c$, либо ключа шифрования $k$ по открытому тексту $m$ и шифротексту $c$.
+%Криптостойкость шифра оценивается числом операций, необходимым для определения: открытого текста $m$ по шифртексту $c$, либо ключа шифрования $k$ по открытому тексту $m$ и шифртексту $c$.
 
 %$M, C, K$ интерпретируются как случайные величины.
 %Пусть заданы распределения вероятностей $P_m(M), P_c(C), P_k(K)$. По определению шифрование $C = E_K(M)$ -- детерминированная функция своих аргументов.
-%Если при выбранном шифре оказалось, что открытый текст $M$ и шифротекст $C$ -- статистически независимые случайные величины, то считается, что такая система обладает совершенной криптостойкостью.
+%Если при выбранном шифре оказалось, что открытый текст $M$ и шифртекст $C$ -- статистически независимые случайные величины, то считается, что такая система обладает совершенной криптостойкостью.
 
 
 %\subsection{Длина ключа}
@@ -98,7 +98,7 @@ H(K)\geq H(K|C)\geq H(M|C).
 %Используя известные соотношения о безусловной и условной энтропии~\cite{GabPil:2007}, оценим энтропию открытых текстов $M$ с учётом статистической независимости $M$ и $C$:
  %   \[ H(M) = H(M | C) \leq H(MK | C) = H(K | C) + H(M | CK) = \]     \[ = H(K | C) \leq H(K). \]
 
-%Так как энтропия открытого текста при заданном шифротексте и известном ключе равна нулю, то $H(M|CK)=0$. В результате получаем     \[ H(M) \leq H(K). \]
+%Так как энтропия открытого текста при заданном шифртексте и известном ключе равна нулю, то $H(M|CK)=0$. В результате получаем     \[ H(M) \leq H(K). \]
 
 Обозначим длины сообщения и ключа как $L(M)$ и $L(K)$ соответственно. Известно, что $H(M) \leq L(M)$~\cite{GabPil:2007}. Равенство $H(M) = L(M)$ достигается, когда сообщения состоят из статистически независимых и равновероятных символов. Такое же свойство выполняется и для случайных ключей $H(K) \leq L(K)$. Таким образом, достаточным условием совершенной криптостойкости системы можно считать неравенство
  \[ L(M) \leq L(K)\]
@@ -130,16 +130,16 @@ H(K)\geq H(K|C)\geq H(M|C).
 Легальный пользователь знает ключ и осуществляет расшифрование:
     \[ M =C \oplus K = (c_1 \oplus k_1, ~ c_2 \oplus k_2, \dots, c_N \oplus k_N). \]
 
-Найдём вероятностное распределение $N$-блоков шифротекстов, используя формулу
+Найдём вероятностное распределение $N$-блоков шифртекстов, используя формулу
 \begin{multline*}
 P(c = a) = P(m \oplus k = a) = \sum_{m} P(m) P(m \oplus k = a | m) = \\
 = \sum_{m} P(m) P(k \oplus m) = \sum_{m} P(m) \frac{1}{2^N} = \frac{1}{2^N}. 
 \end{multline*}
 
 
-Получили подтверждение известного факта: сумма двух случайных величин, одна из которых имеет равномерное распределение, является случайной величиной с равномерным распределением. В нашем случае распределение ключей равномерное, поэтому распределение шифротекстов тоже равномерное.
+Получили подтверждение известного факта: сумма двух случайных величин, одна из которых имеет равномерное распределение, является случайной величиной с равномерным распределением. В нашем случае распределение ключей равномерное, поэтому распределение шифртекстов тоже равномерное.
 
-Запишем совместное распределение открытых текстов и шифротекстов:
+Запишем совместное распределение открытых текстов и шифртекстов:
     \[ P(m = a, c = b) ~=~ P(m = a) ~ P(c = b | m = a). \]
 
 Найдём условное распределение:
@@ -152,7 +152,7 @@ P(c = a) = P(m \oplus k = a) = \sum_{m} P(m) P(m \oplus k = a | m) = \\
 
 Подстановка правой части этой формулы в формулу для совместного распределения даёт
     \[ P(m=a,c=b)=P(m=a)\frac{1}{2^N}, \]
-что доказывает независимость шифротекстов и открытых текстов в этой системе. По доказанному выше, количество информации в шифротексте относительно открытого текста равно нулю. Это значит, что рассмотренная криптосистема Вернама обладает совершенной секретностью (криптостойкостью) при условии, что для каждого $N$-блока (сообщения) генерируется случайный (одноразовый) $N$-ключ.
+что доказывает независимость шифртекстов и открытых текстов в этой системе. По доказанному выше, количество информации в шифртексте относительно открытого текста равно нулю. Это значит, что рассмотренная криптосистема Вернама обладает совершенной секретностью (криптостойкостью) при условии, что для каждого $N$-блока (сообщения) генерируется случайный (одноразовый) $N$-ключ.
 
 \index{криптосистема!Вернама|)}
 
