--- a/rsa.tex
+++ b/rsa.tex
@@ -21,9 +21,9 @@
     \item \textbf{Шифрование с использованием открытого ключа}
         \begin{enumerate}
             \item Сообщение представляют целым числом $m \in [1, n-1]$.
-            \item Шифротекст вычисляется как
+            \item Шифртекст вычисляется как
                 \[ c = m^e \mod n. \]
-                Шифротекст -- также целое число из диапазона $[1, n-1]$.
+                Шифртекст -- также целое число из диапазона $[1, n-1]$.
         \end{enumerate}
     \item \textbf{Расшифрование с использованием закрытого ключа}
 
@@ -31,7 +31,7 @@
                 \[ m = c^d \mod n. \]
 \end{enumerate}
 
-Покажем корректность схемы шифрования RSA. В результате расшифрования шифротекста $c$ (полученного путём шифрования открытого текста $m$) легальный пользователь имеет:
+Покажем корректность схемы шифрования RSA. В результате расшифрования шифртекста $c$ (полученного путём шифрования открытого текста $m$) легальный пользователь имеет:
 \[\begin{array}{ll}
     c^{d} & = m^{ed} \mod p = \\
           & = m^{ 1 + \alpha_1 \cdot \varphi(n)} \mod p = \\
@@ -74,12 +74,12 @@
     \item Шифрование.
         \begin{enumerate}
             \item Пусть сообщение $m = 22 \in [1, n-1]$.
-            \item Вычислим шифротекст:
+            \item Вычислим шифртекст:
                 \[ c = m^e \bmod n = 22^{23} \bmod 143 = 55 \bmod 143. \]
         \end{enumerate}
     \item Расшифрование.
         \begin{enumerate}
-            \item Полученный шифротекст $c = 55$.
+            \item Полученный шифртекст $c = 55$.
             \item Вычислим открытый текст:
                 \[ m = c^d \bmod n = 55^{47} \bmod 143 = 22 \bmod 143. \]
         \end{enumerate}
@@ -156,7 +156,7 @@
 
 \subsection{Семантическая безопасность шифров}
 
-\emph{Семантически безопасной}\index{криптосистема!семантически-безопасная} называется криптосистема, для которой вычислительно невозможно извлечь любую информацию из шифротекстов, кроме длины шифротекста. Алгоритм RSA не является семантически безопасным. Одинаковые сообщения шифруются одинаково, и следовательно применима атака на различение сообщений.
+\emph{Семантически безопасной}\index{криптосистема!семантически-безопасная} называется криптосистема, для которой вычислительно невозможно извлечь любую информацию из шифртекстов, кроме длины шифртекста. Алгоритм RSA не является семантически безопасным. Одинаковые сообщения шифруются одинаково, и следовательно применима атака на различение сообщений.
 
 Кроме того, сообщения длиной менее $\frac{k}{3}$ бит, зашифрованные на малой экспоненте $e=3$, \emph{дешифруются} нелегальным пользователем извлечением обычного кубического корня.
 
