--- a/substitution_ciphers.tex
+++ b/substitution_ciphers.tex
@@ -3,7 +3,7 @@
 
 В шифрах \emph{замены} символы одного алфавита заменяются символами другого путём обратимого преобразования. В последовательности открытого текста символы входного алфавита заменяются на символы выходного алфавита. Такие шифры применяются как в симметричных, так и в асимметричных криптосистемах. Если при преобразовании используются однозначные функции, то такие шифры называются \emph{однозначными} шифрами замены. Если используются многозначные функции, то шифры называются \emph{многозначными} шифрами замены (омофонами).
 
-В \emph{омофоне}\index{омофон} символам входного алфавита ставятся в соответствие непересекающиеся подмножества символов выходного алфавита. Количество символов в каждом подмножестве замены пропорционально частоте встречаемости символа открытого текста. Таким образом, омофон создаёт равномерное распределение символов шифротекста, и прямой частотный криптоанализ невозможен. При шифровании омофонами символ входного алфавита заменяется на случайно выбранный символ из подмножества замены.
+В \emph{омофоне}\index{омофон} символам входного алфавита ставятся в соответствие непересекающиеся подмножества символов выходного алфавита. Количество символов в каждом подмножестве замены пропорционально частоте встречаемости символа открытого текста. Таким образом, омофон создаёт равномерное распределение символов шифртекста, и прямой частотный криптоанализ невозможен. При шифровании омофонами символ входного алфавита заменяется на случайно выбранный символ из подмножества замены.
 
 Шифры называются \emph{моноалфавитными}, когда для шифрования используется одно отображение входного алфавита в выходной алфавит. Если алфавит на входе и выходе одинаков и его размер (число символов) равен $D$, тогда количество всевозможных моноалфавитных шифров замены такого типа равно $D!$.
 
