--- a/stream-ciphers.tex
+++ b/stream-ciphers.tex
@@ -14,8 +14,8 @@
 	\item Перед началом процедуры шифрования отправитель и получатель должны обладать общим секретным ключом.
 	\item Секретный ключ используется для генерации инициализирующей последовательности (\langen{seed}) генератора псевдослучайной последовательности.
 	\item Генераторы отправителя и получателя используются для получения одинаковой псевдослучайной последовательности символов, называемой \emph{гаммой}\index{гамма}. Последовательности одинаковые, если для их получения использовались одинаковые ГПСЧ, инициализированные одной и той же инициализирующей последовательностью, при условии, что генераторы детерминированные.
-	\item Символы открытого текста на стороне отправителя складываются с символами гаммы, используя простейшие обратимые преобразования. Например, побитовое сложение по модулю 2 (операция <<исключающее или>>, \langen{XOR}). Полученный шифротекст передаётся по каналу связи.
-	\item На стороне легального получателя с символами шифротекста и гаммы выполняется обратная операция (для XOR это будет просто повторный XOR) для получения открытого текста.
+	\item Символы открытого текста на стороне отправителя складываются с символами гаммы, используя простейшие обратимые преобразования. Например, побитовое сложение по модулю 2 (операция <<исключающее или>>, \langen{XOR}). Полученный шифртекст передаётся по каналу связи.
+	\item На стороне легального получателя с символами шифртекста и гаммы выполняется обратная операция (для XOR это будет просто повторный XOR) для получения открытого текста.
 \end{itemize}
 
 Очевидно, что криптостойкость потоковых шифров непосредственно основана на стойкости используемых ГПСЧ. Большой размер инициализирующей последовательности, длинный период, большая линейная сложность -- необходимые атрибуты используемых генераторов.
