--- a/vigeneres_cipher.tex
+++ b/vigeneres_cipher.tex
@@ -36,7 +36,7 @@
     \hline
 \end{tabular} } \end{center}
 
-Здесь первый столбец используется для ключевой последовательности, а первая строка -- для открытого текста. Общая схема шифрования такова: выбирается некоторая ключевая последовательность, которая периодически повторяется в виде длинной строки. Под ней соответственно каждой букве записываются буквы открытого текста в виде второй строки. Буква ключевой последовательности указывает строку в квадрате Виженера, буква открытого текста указывает столбец в квадрате. Соответствующая буква, стоящая в квадрате на пересечении строки и столбца, заменяет букву открытого текста в шифротексте. Приведём примеры.
+Здесь первый столбец используется для ключевой последовательности, а первая строка -- для открытого текста. Общая схема шифрования такова: выбирается некоторая ключевая последовательность, которая периодически повторяется в виде длинной строки. Под ней соответственно каждой букве записываются буквы открытого текста в виде второй строки. Буква ключевой последовательности указывает строку в квадрате Виженера, буква открытого текста указывает столбец в квадрате. Соответствующая буква, стоящая в квадрате на пересечении строки и столбца, заменяет букву открытого текста в шифртексте. Приведём примеры.
 
 \example
 Ключевая последовательность состоит из периодически повторяющегося ключевого слова, известного обеим сторонам. Пусть ключевая последовательность состоит из периодически повторяющегося слова THIS, а открытый текст -- слова COMMUNICATIONSYSTEMS (см. таблицу). Пробелы между словами опущены.
@@ -44,7 +44,7 @@
     \hline
     Ключ            & T & H & I & S & T & H & I & S & T & H & I & S & T & H & I & S & T & H & I & S \\
     Открытый текст  & C & O & M & M & U & N & I & C & A & T & I & O & N & S & Y & S & T & E & M & S \\
-    Шифротекст      & X & X & U & E & O & U & R & U & T & B & R & G & G & A & F & L & N & M & U & L \\
+    Шифртекст      & X & X & U & E & O & U & R & U & T & B & R & G & G & A & F & L & N & M & U & L \\
     \hline
 \end{tabular} } \end{center}
 Результат шифрования приведён в третьей строке: на пересечении строки $T$ и столбца $C$ стоит буква $X$, на пересечении строки $H$ и столбца $O$ стоит буква $X$, на пересечении строки $I$ и столбца $M$ стоит буква $U$ и~т.\,д.
@@ -58,18 +58,18 @@
     \hline
     Ключ            & T & C & O & M & M & U & N & I & C & A & T & I & O & N & S & Y & S & T & E & M \\
     Открытый текст  & C & O & M & M & U & N & I & C & A & T & I & O & N & S & Y & S & T & E & M & S \\
-    Шифротекст      & X & Q & A & Z & G & H & X & L & C & T & C & Y & B & F & P & P & M & Z & Q & E \\
+    Шифртекст      & X & Q & A & Z & G & H & X & L & C & T & C & Y & B & F & P & P & M & Z & Q & E \\
     \hline
 \end{tabular} } \end{center}
 \exampleend
 
 \example 
-Пусть ключевая последовательность образуется с помощью шифротекста. Стороны договариваются о первой букве ключа. В отличие от предыдущего случая, следующая буква ключа -- это результат шифрования первой буквы текста и~т.\,д. Пусть в качестве первой буквы выбрана буква $T$. Тогда приведённая в предыдущем примере таблица шифрования примет такой вид:
+Пусть ключевая последовательность образуется с помощью шифртекста. Стороны договариваются о первой букве ключа. В отличие от предыдущего случая, следующая буква ключа -- это результат шифрования первой буквы текста и~т.\,д. Пусть в качестве первой буквы выбрана буква $T$. Тогда приведённая в предыдущем примере таблица шифрования примет такой вид:
 \begin{center} \resizebox{\textwidth}{!}{ \begin{tabular}{|l|*{20}c|}
     \hline
     Ключ            & T & X & K & X & H & C & P & Z & A & A & T & C & Q & D & X & S & L & E & I & U \\
     Открытый текст  & C & O & M & M & U & N & I & C & A & T & I & O & N & S & Y & S & T & E & M & S \\
-    Шифротекст      & X & K & X & H & C & P & Z & A & A & T & C & Q & D & X & S & L & E & I & U & N \\
+    Шифртекст      & X & K & X & H & C & P & Z & A & A & T & C & Q & D & X & S & L & E & I & U & N \\
     \hline
 \end{tabular} } \end{center}
 \exampleend
