--- a/coincide-index_method.tex
+++ b/coincide-index_method.tex
@@ -42,7 +42,7 @@
    {Y_{L/2} }  \\
  \end{array} } \right],
 \]
-где одинаково распределённые случайные буквы в первой строке имеют распределение
+где одинаково распределённые случайные буквы в первой строке имеют распределение:
     \[ \mathcal{P}_1  = \left\{ {p_{11} ,p_{12} , \ldots , p_{1A} } \right\}, \]
 а одинаково распределённые случайные буквы во второй строке имеют другое распределение
     \[ \mathcal{P}_2  = \left\{ {p_{21} ,p_{22} , \ldots , p_{2A} } \right\}. \]
