--- a/polyalphabetic_cipher_cryptanalysis.tex
+++ b/polyalphabetic_cipher_cryptanalysis.tex
@@ -53,7 +53,7 @@
     \hline
 \end{tabular} } \end{center}
 
-В рассматриваемом примере проведённый анализ показал следующее.
+В рассматриваемом примере проведённый анализ показал следующее:
 \begin{itemize}
     \item Сегмент СЪС встречается в позициях $1, 373, 417, 613$. Соответствующие расстояния равны
         \[ \begin{array}{l}
