--- a/polyalphabetic_cipher_cryptanalysis.tex
+++ b/polyalphabetic_cipher_cryptanalysis.tex
@@ -115,7 +115,7 @@ $p_i $ -- частота появления буквы $i$ в естествен
 Теоретическое обоснование метода индекса совпадений не является простым. Оно приведено в приложении~\ref{chap:coincide-index} к данному пособию.
 
 \example
-В рассматриваемом выше примере приведены значения $f_{i}$. Для русского языка
+В рассматриваемом выше примере приведены значения $f_{i}$. Для русского языка:
     \[ A=32, ~ k_{r} = \frac{1}{32} \approx 0.03125, ~ k_{p} \approx 0.0529. \]
 Проведя вычисления, получаем $m \approx 3.376$. Полученное по формуле приближённое значение m достаточно близко к значению периода $n=4$.
 \exampleend 
