--- a/el-gamal.tex
+++ b/el-gamal.tex
@@ -31,7 +31,7 @@
         \begin{enumerate}
             \item Стороне $B$ известен открытый ключ $\text{PK} = (p, g, y)$ стороны $A$.
             \item Сообщение представляется числом $m \in [0, p-1]$.
-            \item Сторона $B$ выбирает случайное число $r \in [1, p-1]$ и вычисляет
+            \item Сторона $B$ выбирает случайное число $r \in [1, p-1]$ и вычисляет:
                 \[ \begin{array}{l}
                     a = g^r \mod p, \\
                     b = m \cdot y^r \mod p.
@@ -42,7 +42,7 @@
         \end{enumerate}
     \item \textbf{Расшифрование на закрытом ключе стороной $A$.}
 
-	Получив сообщение $(a, b)$ и владея закрытым ключом $\text{SK} = (p, g, x)$, $A$ вычисляет
+	Получив сообщение $(a, b)$ и владея закрытым ключом $\text{SK} = (p, g, x)$, $A$ вычисляет:
                 \[ m = \frac{b}{a^x} \mod p. \]
 \end{enumerate}
 
